[package]
name = "staking_options"
version = "0.0.6"
description = "Staking options from dual finance"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_options"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
solana-security-txt = "1.0.1"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
vipers = "^2.0"