[package]
name = "staking_options"
version = "0.0.9"
description = "Staking options from dual finance"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_options"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
mpl-token-metadata =  {version = "1.4.0", features = ["no-entrypoint"]}
solana-security-txt = "1.0.1"
solana-program = "1.9.13"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}